log/build_2024-05-31_16-46-14/ros_ads_loop/stderr.log
  File "/home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop/QUEST.py", line 16
    import .eig_helper as eh
           ^
SyntaxError: invalid syntax

